--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:wght@600&family=Poppins:ital,wght@0,600;1,600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/accest/css/style.css">
+    <link rel="stylesheet" href="./accest/css/style.css">
 </head>
 
 <body>
@@ -114,7 +114,8 @@
             <div class="card_contain">
                 <img src="/accest/img/Vector.png" alt="">
                 <h3>Latest Equipent</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore.</p>
                 <div>
                     <a href="">Read More</a>
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -123,7 +124,8 @@
             <div class="card_contain">
                 <img src="/accest/img/Vector.png" alt="">
                 <h3>Latest Equipent</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore.</p>
                 <div>
                     <a href="">Read More</a>
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -132,7 +134,8 @@
             <div class="card_contain">
                 <img src="/accest/img/Vector.png" alt="">
                 <h3>Latest Equipent</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore.</p>
                 <div>
                     <a href="">Read More</a>
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -151,21 +154,25 @@
                     <span>ABOUT US</span>
                     <h3>We Provide Best in
                         Class Medical Services</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi.</p>
                 </div>
                 <div class="medical_icon_div">
                     <div class="medical_icon_1">
                         <img src="/accest/img/elipse.png" alt="">
                         <div class="medical_icon_text">
                             <h4>Gastric Fluid Analysis</h4>
-                            <p>Medical procedure used to examine the secretions and other liquid substances occurring in the stomach.                            </p>
+                            <p>Medical procedure used to examine the secretions and other liquid substances occurring in
+                                the stomach. </p>
                         </div>
                     </div>
                     <div class="medical_icon_1">
                         <img src="/accest/img/elipse1.png" alt="">
                         <div class="medical_icon_text">
                             <h4>Gastric Fluid Analysis</h4>
-                            <p>Medical procedure used to examine the secretions and other liquid substances occurring in the stomach.                            </p>
+                            <p>Medical procedure used to examine the secretions and other liquid substances occurring in
+                                the stomach. </p>
                         </div>
                     </div>
 
@@ -185,19 +192,22 @@
                     <div class="item-div-obwiy">
                         <img src="/accest/img/icon.png" alt="">
                         <h4>lung diseases</h4>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum. </p>
                         <a href="">Explore Now<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                     <div class="item-div-obwiy">
                         <img src="/accest/img/icon2.png" alt="">
                         <h4>heart diseases</h4>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum. </p>
                         <a href="">Explore Now<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                     <div class="item-div-obwiy">
                         <img src="/accest/img/icon3.png" alt="">
                         <h4>orthopaedic</h4>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum. </p>
                         <a href="">Explore Now<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -205,19 +215,22 @@
                     <div class="item-div-obwiy">
                         <img src="/accest/img/icon4.png" alt="">
                         <h4>Dental Care</h4>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum. </p>
                         <a href="">Explore Now<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                     <div class="item-div-obwiy">
                         <img src="/accest/img/icon5.png" alt="">
                         <h4>sports injury</h4>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum. </p>
                         <a href="">Explore Now<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                     <div class="item-div-obwiy">
                         <img src="/accest/img/icon6.png" alt="">
                         <h4>General Surgery</h4>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum. </p>
                         <a href="">Explore Now<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -229,14 +242,14 @@
         <div class="care_container">
             <div class="care_text">
                 <span>WE ARE TAKE CARE</span>
-                <h2>Healing with Online 
-                    Appointment 
-                     Doctor
+                <h2>Healing with Online
+                    Appointment
+                    Doctor
                     Advanced Treatment</h2>
                 <div class="care_button">
                     <a class="doctor_button" href="">Find a Doctor</a>
                     <a class="book_button" href="">Book Appointment</a>
-                    
+
                 </div>
             </div>
             <div class="care_contain">
@@ -247,7 +260,7 @@
                         <a href="">Doctors</a>
 
                     </div>
-                    <div class="care_div1">
+                    <div class="care_div2">
                         <img src="/accest/img/shadow.png" alt="">
                         <span>200+</span>
                         <a href="">doctors</a>
@@ -259,7 +272,7 @@
                         <a href="">doctors</a>
 
                     </div>
-                    <div class="care_div1">
+                    <div class="care_div2">
                         <img src="/accest/img/shadow.png" alt="">
                         <span>200+</span>
                         <a href="">Doctors</a>
@@ -341,6 +354,233 @@
 
         </div>
     </section>
+    <section class="patients_section">
+        <div class="patients_container">
+            <div class="patients_img_container">
+                <img src="/accest/img/image 25.png" alt="">
+            </div>
+            <div class="patients_tex_container">
+                <h4>TESTIMONIALS</h4>
+                <h3>Patients Reviews</h3>
+                <img class="zapitaya" src="/accest/img/quote.png" alt="">
+                <p class="dr_dang">“Dr Dang was extremely welcoming, knowledgeable and friendly.Historically, drugs were
+                    discovered through identifying the active ingredient from traditional remedies or by serendipitous
+                    discovery. Later chemical libraries of synthetic small molecules.”
+                </p>
+                <div class="mildrad_img">
+                    <img src="/accest/img/sepehr-safari-sajiam-n8bZJpA0hig-unsplash 1.png" alt="">
+                    <div class="mildrad_tex">
+                        <h5>Mildred Payne</h5>
+                        <p>Digital Marketer</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section class="sponsor_section">
+        <div class="sponsor_container">
+            <img src="./accest/img/1.png" alt="">
+            <img src="./accest/img/2.png" alt="">
+            <img src="./accest/img/3.png" alt="">
+            <img src="./accest/img/4.png" alt="">
+            <img src="./accest/img/5.png" alt="">
+            <img src="./accest/img/6.png" alt="">
+
+        </div>
+
+    </section>
+    <section class="blognew_section">
+        <div class="blognew_container">
+            <div class="blognew_logo">
+                <span>BLOG & NEWS</span>
+                <h2>read our health news</h2>
+            </div>
+            <div class="blognew_item">
+                <div class="blognew_img_contain">
+                    <img src="./accest/img/newblogimg.png" alt="">
+                    <div>
+                        <span><i class="fa-solid fa-calendar-days"></i>Nov, 20, 2022</span>
+                        <span><i class="fa-solid fa-calendar-days"></i>Health Care</span>
+                    </div>
+                    <h4>Simple Ways to Plan, Enjoy and
+                        Stick to a Healthy Diet</h4>
+                    <p>We are provide excellent medical advices for your good health and we… </p>
+
+                </div>
+                <div class="blognew_img_contain">
+                    <img src="./accest/img/newblogimg.png" alt="">
+                    <div>
+                        <span><i class="fa-solid fa-calendar-days"></i>Nov, 20, 2022</span>
+                        <span><i class="fa-solid fa-calendar-days"></i>Health Care</span>
+                    </div>
+                    <h4>Simple Ways to Plan, Enjoy and
+                        Stick to a Healthy Diet</h4>
+                    <p>We are provide excellent medical advices for your good health and we… </p>
+
+                </div>
+                <div class="blognew_img_contain2">
+                    <div class="img_blognew_span">
+                        <img src="./accest/img/raddoctor.png" alt="">
+                        <div>
+                            <div class="span_blognews">
+                                <span><i class="fa-solid fa-calendar-days"></i>Nov, 20, 2022</span>
+                                <span><i class="fa-solid fa-calendar-days"></i>Health Care</span>
+                            </div>
+                            <div>
+                                <h5>Multi super doctors and
+                                    kind behavior</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img_blognew_span">
+                        <img src="./accest/img/raddoctor.png" alt="">
+                        <div>
+                            <div class="span_blognews">
+                                <span><i class="fa-solid fa-calendar-days"></i>Nov, 20, 2022</span>
+                                <span><i class="fa-solid fa-calendar-days"></i>Health Care</span>
+                            </div>
+                            <div>
+                                <h5>Multi super doctors and
+                                    kind behavior</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img_blognew_span">
+                        <img src="./accest/img/raddoctor.png" alt="">
+                        <div>
+                            <div class="span_blognews">
+                                <span><i class="fa-solid fa-calendar-days"></i>Nov, 20, 2022</span>
+                                <span><i class="fa-solid fa-calendar-days"></i>Health Care</span>
+                            </div>
+                            <div>
+                                <h5>Multi super doctors and
+                                    kind behavior</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img_blognew_span">
+                        <img src="./accest/img/raddoctor.png" alt="">
+                        <div>
+                            <div class="span_blognews">
+                                <span><i class="fa-solid fa-calendar-days"></i>Nov, 20, 2022</span>
+                                <span><i class="fa-solid fa-calendar-days"></i>Health Care</span>
+                            </div>
+                            <div>
+                                <h5>Multi super doctors and
+                                    kind behavior</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <section class="subscribe_section">
+        <div class="sibsrcibe_container">
+            <div class="subsribe_text">
+                <span>NEWSLETTER SUBSCRIBE</span>
+                <h2>get more update to
+                    subscribe us</h2>
+
+            </div>
+            <div class="subscribe_button">
+                <form action="">
+                    <img src="/accest/img/marketicon.png" alt="">
+                    <input type="text" placeholder="Email Address...">
+                </form>
+                <a href="">Subscribe</a>
+
+            </div>
+
+        </div> 
+    </section>
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="ul_footer">
+                <div class="img_footer">
+                    <img src="./accest/img/logo (1).png" alt="">
+                    <p>Ipsum dolor sit amet, consecterelit, sed do eiusmod tempor incididunt.Ipsum dolor sit amet
+                        consecterelit, sed do eiusmod tempor incididunt. </p>
+                    <a href=""><i class="fa-solid fa-calendar-days"></i>+1-2345-3455-33</a>
+                    <a href=""><i class="fa-solid fa-calendar-days"></i>contact@medikel.com</a>
+                    <a href=""><i class="fa-solid fa-calendar-days"></i>1810 Kings WayKing Street,
+                        5th Avenue, New Yor</a>
+                </div>
+                <div class="footer_1">
+                    <h2>quick link</h2>
+                    <ul>
+                        <li>About Us</li>
+                        <li>Services</li>
+                        <li>Our Pricing</li>
+                        <li>Our Gallery</li>
+                        <li>Appointment</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+                <div class="footer_1">
+                    <h2>OUR SERVICES</h2>
+                    <ul>
+                        <li>Long Diseases</li>
+                        <li>Head Diseases</li>
+                        <li>Orthopadics</li>
+                        <li>Dental Care</li>
+                        <li>Sport injury</li>
+                        <li>General Surgery</li>
+                    </ul>
+                </div>
+                <div class="footer_colum">
+                    <h2>OPENING hours</h2>
+                    <div class="footer_colon">
+                        <div class="footer_2">
+                            <ul>
+                                <li>Mon-Tues</li>
+                                <li>Tues-Wen</li>
+                                <li>Wen-Tues</li>
+                                <li>Thurs-Fri</li>
+                                <li>Fri-Sad</li>
+                                <li>Sad-Sun</li>
+                            </ul>
+                        </div>
+                        <div class="footer_3">
+                            <ul>
+                                <li>08:00 AM - 05:00PM</li>
+                                <li>08:00 AM - 05:00PM</li>
+                                <li>08:00 AM - 05:00PM</li>
+                                <li>08:00 AM - 05:00PM</li>
+                                <li>08:00 AM - 05:00PM</li>
+                                <li>10:00 AM - 08:00PM</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="div_copyright">
+                <div class="copyright_icon">
+                    <img src="./accest/img/facebook.png" alt="">
+                    <img src="./accest/img/facebook.png" alt="">
+                    <img src="./accest/img/facebook.png" alt="">
+                    <img src="./accest/img/facebook.png" alt="">
+                </div>
+                <div class="copyright_text">
+                    <span>Copyright ©2022</span>
+                    <a href="">Medikel</a>
+                    <span>All Rights Reserved</span>
+                </div>
+                <div class="div_copright_left">
+                    <span>Terms & Condition   |   Privacy Policy</span>
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
+
 </body>
 
 </html>
