--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="button_container">
                 <a href=""><img src="/accest/img/search.png" alt=""></a>
                 <a href=""><img src="/accest/img/cart.png" alt=""></a>
-                <button> <i></i> Book Appointment </button>
+                <button> <img src="./accest/img/iconlogo.png" alt=""> Book Appointment </button>
 
             </div>
         </div>
@@ -66,7 +66,7 @@
                     <h2>Appointment</h2>
                 </div>
                 <div class="chekbox_div">
-                    <form action=""><input type="checkbox" name="" id=""></form>
+                    <form action=""><input type="checkbox" checked name="" id=""></form>
                     <span>Send message on email</span>
                 </div>
                 <div class="button_div">
@@ -562,10 +562,10 @@
             </div>
             <div class="div_copyright">
                 <div class="copyright_icon">
-                    <img src="./accest/img/facebook.png" alt="">
-                    <img src="./accest/img/facebook.png" alt="">
-                    <img src="./accest/img/facebook.png" alt="">
-                    <img src="./accest/img/facebook.png" alt="">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
                 </div>
                 <div class="copyright_text">
                     <span>Copyright ©2022</span>
